Updated for GLEAM

--- a/CV.tex
+++ b/CV.tex
@@ -96,9 +96,9 @@ Bachelor of Science in Computer Science
 \Item
 Minors: Mechanical Engineering and Math
 \Item
-Cumulative GPA: \textbf{3.652} / 4.0
+Cumulative GPA: \textbf{3.500} / 4.0
 \Item
-Credit Hours: 89
+Credit Hours: 104
 \end{detail}
 
 
@@ -115,13 +115,15 @@ Credit Hours: 89
 Greenville, Texas
 \par
 \Item
-Interactive Research and Development CO-OP Student
+Internal Research and Development CO-OP Student
 \hfill
-\DatestampYMD{2015}{05}{15} --
-\DatestampYMD{2015}{08}{15}
+\DatestampYMD{2017}{01}{15} --
+\DatestampYMD{2017}{08}{15}
 \begin{detail}
 \BulletItem
-Design, Developed, and Implemented several buisness unit enhancement applications
+Designed and Developed AngularJS web applications
+\BulletItem
+Engineered Backend Services for Chat and Video web applications
 \end{detail}
 \SmallEntryGap
 \SmallEntryGap
@@ -132,8 +134,8 @@ Houston, Texas
 \Item
 Information Management Internship @ Gexa Energy
 \hfill
-\DatestampYMD{2015}{05}{15} --
-\DatestampYMD{2015}{08}{15}
+\DatestampYMD{2016}{05}{15} --
+\DatestampYMD{2016}{08}{15}
 \begin{detail}
 \BulletItem
 Design, Developed, and Implemented several buisness unit enhancement applications
@@ -159,9 +161,7 @@ Job Fair Software Update
 \BulletItem
 Moving Job Fair Sign In and Analytics to Web
 \BulletItem
-C\# Web Application -- \href{https://github.com/rahutchinson/COEJOBFAIR}{\underline{Project - Github}}
-\BulletItem
-Timeline: Completion in one semester
+C\# Web Application
 \end{detail}
 \SmallEntryGap
 \SmallEntryGap
