--- a/CV.tex
+++ b/CV.tex
@@ -26,7 +26,17 @@
 
 % Do not stop on errors during compilation.
 \nonstopmode
+\usepackage{hyperref}
 
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    filecolor=magenta,      
+    urlcolor=blue,
+    pdftitle={Sharelatex Example},
+    bookmarks=true,
+    pdfpagemode=FullScreen,
+    }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% PREAMBLE.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -53,19 +63,125 @@
 
 \begin{subtitle}
 
-{8235 Redchurch Drive, Spring, Texas 77379, USA}
 \par
-\href{mailto:ryan.a.hutchinson@ttu.edu}
-{ryan.a.hutchinson@ttu.edu}
+\href{mailto:ryanahutchinson@gmail.com}
+{ryanahutchinson@gmail.com}
 \,\BulletSymbol\,
 +1\,(713)\,367-6863
 \,\BulletSymbol\,
-\href{https://www.linkedin.com/in/ryan-hutchinson-94452a7b}{\underline{LinkedIn Profile}}
-\,\BulletSymbol\,
-\href{https://github.com/rahutchinson}{\underline{GitHub}}
+LinkedIn: ryahutchinson
+\BulletSymbol\,
+GitHub: rahutchinson
 \end{subtitle}
 
 \begin{body}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%
+%% EXPERIENCE %%
+%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section
+{Experience}
+{Experience}
+{PDF:Experience}
+
+{\textbf{General Motors Innovation Center}},
+Austin, Texas
+\par
+\Item
+\textit{Data Science / Operations Research}
+\hfill
+\DatestampYMD{2018}{06}{15} --
+\begin{detail}
+\BulletItem
+reduced forecasting error by 20\% using neural network time-series prediction models
+\BulletItem
+built distributed computation for training models with Docker and RabbitMQ
+\BulletItem
+developed validation processes for datasets and models with simple classification
+\BulletItem
+worked to establish hyper parameterization process for model training 
+\BulletItem
+supported production development team with transfer from concept handover through multiple releases
+\BulletItem
+pioneered multiple ETL pipelines for new dataset creation using Sqoop, Oozie, PySpark, and eventually Koalas!
+\BulletItem
+proposed operational excellence projects on calculating supply chain part cost models 
+\BulletItem
+served as campus coordinator for a couple sucessful recruitment trips to Texas Tech University
+\BulletItem
+Volunteer Event Planner with JumpStart group to engage and connect new college hires in Austin
+\Item
+\textbf{Hadoop, Jupyter, Pandas, SQL, Numpy, Hive, PySpark, Oozie, Sqoop}
+
+\end{detail}
+\SmallEntryGap
+\SmallEntryGap
+{\textbf{TitleFlow LLC}},
+Lubbock, Texas
+\par
+\Item
+\textit{Strategy \& Operations Analyst}
+\hfill
+\DatestampYMD{2017}{09}{15} --
+\DatestampYMD{2018}{05}{15}
+\begin{detail}
+\BulletItem
+strategic development and reorganization of core services
+\BulletItem
+added Excel Workbook creator using AWS EC2 instances and S3 Bucket
+\BulletItem
+defined software process for development teams
+\BulletItem
+analyze user usage for feature prioritization
+\Item
+\textbf{Bootstrap, AWS S3/EC2/Lambda, Azure Functions, Google Analytics, Intercom}
+
+\end{detail}
+\SmallEntryGap
+\SmallEntryGap
+
+
+{\textbf{L3 Technologies}},
+Greenville, Texas
+\par
+\Item
+\textit{Internal Research and Development CO-OP Software Developer}
+\hfill
+\DatestampYMD{2017}{01}{15} --
+\DatestampYMD{2017}{08}{15}
+\begin{detail}
+\BulletItem
+designed and developed AngularJS web applications
+\BulletItem
+engineered Backend Services for Chat and Video web applications
+\BulletItem
+convinced purchase of Microsoft Hololens and created business use cases
+\BulletItem
+received Secret Security Clearance
+\Item
+\textbf{AngularJS, JavaScript, Java, Python, Web-RTC, REST API, Bootstrap}
+
+\end{detail}
+\SmallEntryGap
+\SmallEntryGap
+
+{\textbf{NextEra Energy Resources}},
+Houston, Texas
+\par
+\Item
+\textit{Information Management Internship @ Gexa Energy}
+\hfill
+\DatestampYMD{2016}{05}{15} --
+\DatestampYMD{2016}{08}{15}
+\begin{detail}
+\BulletItem
+design, developed, and implemented several business unit enhancement applications
+\BulletItem
+collaborated with business groups for quick high impact python scripts
+\end{detail}
+\SmallEntryGap
+\SmallEntryGap
 
 %%%%%%%%%%%%%%%
 %% EDUCATION %%
@@ -88,256 +204,114 @@
 Lubbock, Texas
 
 \SmallEntryGap
-Bachelor of Science in Computer Science
+Bachelor of Science in Computer Science  | GPA: 3.48
 \hfill
 \DatestampYMD{}{}{}
-\textbf{\DatestampYMD{2018}{05}{15}}
+\DatestampYMD{2018}{05}{15}
 \begin{detail}
 \Item
-Minors: Mechanical Engineering and Math
-\Item
-Cumulative GPA: \textbf{3.500} / 4.0
-\Item
-Credit Hours: 104
+Study Abroad: Northern Chile / San Pedro de Atacama
 \end{detail}
 
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%
-%% RESEARCH EXPERIENCE %%
-%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section
-{Experience}
-{Experience}
-{PDF:Experience}
-{\textbf{L3 Technologies}},
-Greenville, Texas
-\par
-\Item
-Internal Research and Development CO-OP Student
-\hfill
-\DatestampYMD{2017}{01}{15} --
-\DatestampYMD{2017}{08}{15}
-\begin{detail}
-\BulletItem
-Designed and Developed AngularJS web applications
-\BulletItem
-Engineered Backend Services for Chat and Video web applications
-\end{detail}
-\SmallEntryGap
-\SmallEntryGap
-
-{\textbf{NextEra Energy Resources}},
-Houston, Texas
-\par
-\Item
-Information Management Internship @ Gexa Energy
-\hfill
-\DatestampYMD{2016}{05}{15} --
-\DatestampYMD{2016}{08}{15}
-\begin{detail}
-\BulletItem
-Design, Developed, and Implemented several buisness unit enhancement applications
-\BulletItem
-Using Python for quick easy development
-\BulletItem
-Identified certain software on all assets on the network and returned data for anlysis
-\BulletItem
-Integrated with a testing schedule to meet deadlines
-\end{detail}
-\SmallEntryGap
-\SmallEntryGap
-
-{\textbf{Whitacre College of Engineering}},
-Lubbock, Texas
-\par
-\Item
-Job Fair Software Update
-\hfill
-\DatestampYMD{2015}{05}{15} --
-\DatestampYMD{2015}{09}{15}
-\begin{detail}
-\BulletItem
-Moving Job Fair Sign In and Analytics to Web
-\BulletItem
-C\# Web Application
-\end{detail}
-\SmallEntryGap
-\SmallEntryGap
-
-{\textbf{ERCOT}},
-Taylor, Texas
-\par
-\Item
-Information Technology Internship
-\hfill
-\DatestampYMD{2015}{05}{15} --
-\DatestampYMD{2015}{08}{15}
-\begin{detail}
-\BulletItem
-Design, Developed, and Implemented a Web application
-\BulletItem
-Java EE, Maven, JBoss Framework
-\BulletItem
-Integration with Agile
-\end{detail}
-\SmallEntryGap
-\SmallEntryGap
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Research}
-{Research}
-{PDF:Research}
-
-{\textbf{NASA ISS Water Mass Reduction}},
-Texas Tech University
-\par
-\Item
-Undergraduate Research Student Assistant
-\hfill
-\DatestampYMD{2016}{1}{15} --
-\DatestampYMD{2016}{2}{15}
-\begin{detail}
-
-\BulletItem
-Expanded on current program to allow more pumps and automation
-\BulletItem
-Followed agile methodolgy with strict testing schedule
-\BulletItem
-XAML Interface --  \href{https://github.com/rahutchinson/Pump_Control}{\underline{Project - GitHub}}
-\end{detail}
-\SmallEntryGap
-{\textbf{Selenium Coated RO Filter Membrane}},
-Lubbock, Texas
-\par
-\Item
-Undergraduate Research Student Assistant
-\Item
-Project:
-NSF Research Grant: Enviromental Engineering
-\hfill
-\DatestampYMD{2014}{10}{15} --
-\DatestampYMD{2015}{02}{15}
-\begin{detail}
-\BulletItem
-Independently developed and implemented data acquisition system
-\BulletItem
-Researched better data acquisitions techniques
-\BulletItem
-Developed time saving programs for file manipulation
-\end{detail}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section
 {Involvement}
 {Involvement}
 {PDF:Involvement}
+{\textbf{Texas Tech Ed Whitacre College of Engineering Young Guns}}
+\par
+\Item
+\textit{Co-Chair - Fall 2018}
+\hfill
+\begin{detail}
+\SmallEntryGap
+\BulletItem
+work with College of Engineering Dean's Council members to guide new college grads
+\BulletItem
+setup and host social events for several Young Gun locations
+\BulletItem
+re-aligning Young Guns group for better feedback from all and not just executive committee
+\end{detail}
+\SmallEntryGap
+{\textbf{Texas Tech Computer Science - External Advisory Board}}
+\par
+\Item
+\textit{Inducted Spring 2019}
+\hfill
+\begin{detail}
+\SmallEntryGap
+\BulletItem
+discussed feedback from experiences during undergraduate degree
+\BulletItem
+worked as ACM Liason for the student lead group to find areas to improve and support
+\BulletItem
+teamed up with alumni to provide support to undergrads with resume critiques and mock interviews
+\end{detail}
+\SmallEntryGap
+{\textbf{McCombs School of Business - Data Visualization Bootcamp}}
+\par
+\Item
+\textit{Trilogy Education Services  - Teaching Assistant}
+\hfill
+\DatestampYMD{2019}{01}{15} --
+\DatestampYMD{2019}{07}{15}
+\begin{detail}
+\SmallEntryGap
+\BulletItem
+work with an instructor to educate those wanting to visualize data - 35 students
+\BulletItem
+program in conjunction with UT Mccombs Business School taught on week nights and Saturday
+\BulletItem
+program in conjunction with UT Mccombs Business School
+\BulletItem
+\href{https://techbootcamps.utexas.edu/data/}{topics covered} "From Excel to Hadoop"
+\Item
+\textbf{Python, Hadoop, ETL, Data Visualization, Machine Learning}
+\end{detail}
+\SmallEntryGap
 {\textbf{Texas Tech Engineering Ambassador,}  Engineering Opportunities Center}
 \par
 \Item
-Active Member
+Past Member
 \hfill
 \DatestampYMD{2015}{11}{30} --
-\DatestampYMD{2018}{12}{15}
+\DatestampYMD{2018}{5}{15}
 \begin{detail}
 \BulletItem
-Speak with prospective students and families 
+spoke with prospective students and families 
 \BulletItem
-Interact with civic groups and high school students
+interacted with civic groups and high school students
 \BulletItem
-Give tours of the engineering facilities
+gave tours of the engineering facilities
 \BulletItem
-Outreach to local middle schools and high schools
+created STEM outreach programs for local middle schools and high schools
+\BulletItem
+hosted companies on campus during recruiting events
 \end{detail}
 \SmallEntryGap
-{\textbf{TECHniques Center}, Texas Tech Student Disabilties}
 
-\par
-\Item
-Student Tutor
-\hfill
-\DatestampYMD{2016}{08}{15} --
-\DatestampYMD{2016}{12}{15}
-\begin{detail}
-\BulletItem Tutor students diagnosed with disablities
-\BulletItem Certified College Reading and Learning Association (CRLA)
-\end{detail}
-\SmallEntryGap
-{\textbf{Formula SAE}, Red Raider Racing}
-\par
-\Item
-Electronics and Ergonomics Lead
-\hfill
-\DatestampYMD{2014}{08}{15} --
-\DatestampYMD{2016}{09}{15}
-\begin{detail}
-\BulletItem
-Designed and Implemented 6-Axis Accelerometer data Logger -- \href{https://github.com/rahutchinson/FDRM64-6Axis-2-SDCARD}{\underline{Project - GitHub}}
-\BulletItem
-ReDesigned Website for focus on Sponsor use -- \href{https://github.com/rahutchinson/FSAE_Site}{\underline{Project - GitHub}}
-\end{detail}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% ACADEMIC HONORS & AWARDS %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section
-{Academic Awards}
-{Academic Awards}
-{PDF:AcademicAwards}
-{\textbf{Dean's List}},
-\hfill
-\DatestampY{2014} --
-\DatestampY{2016}
-\begin{detail}
-\Item
-Whitacre College of Engineering
-\Item
-For attaining a semester GPA of at least 3.75.
-\end{detail}
-
-
-{\textbf{Presidential Scholarship}},
-Texas Tech University
-\hfill
-\DatestampYMD{2014}{08}{15}
-\begin{detail}
-
-\end{detail}
 
 
 %%%%%%%%%%%%
 %% SKILLS %%
 %%%%%%%%%%%%
 
-%\section
-%{Skills}
-%{Skills}
-%{PDF:Skills}
-%{\LaTeX},
-%C,C\#,C++,
-%Java EE,
-%Agile,
-%Python,
-%GUI,
-%Office Tool Suite,
-%Documented Leadership skills,
-%Recognized Communication skills
-
-
-%%%%%%%%%%%%%%%
-%% INTERESTS %%
-%%%%%%%%%%%%%%%
-
 \section
 {Interests}
 {Interests}
 {PDF:Interests}
-
-Flight, Speed, and Motorsports
-
+speed, formula 1, flight, teaching
+%%%%%%%%%%%%%%%
+%% INTERESTS %%
+%%%%%%%%%%%%%%%
 \end{body}
 \end{document}
+
+
+
